--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.http.multipart.max-file-size=5MB
 spring.http.multipart.max-request-size=5MB
-server.port=11855
+server.port=${server_port:11855}
