--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=fileuploader
+spring.application.name=file-uploader
 spring.cloud.config.uri=http://localhost:11811
 management.security.enabled=false
